--- a/services.html
+++ b/services.html
@@ -22,12 +22,12 @@
     }
     .panel ul li{ margin:8px 0; }
 
-    /* Open to Work */
     .openRow{
       display:flex;
       align-items:center;
       gap:10px;
-      margin:0 0 14px;
+      margin:6px 0 14px;
+      font-size:12px;
       font-weight:700;
       color:#2ecc71;
     }
@@ -162,7 +162,7 @@
 
       <div class="openRow">
         <span class="openDot"></span>
-        <span>Open to Work</span>
+        <span>Open to work</span>
       </div>
 
       <p>I provide end-to-end media production services for individuals, organizations, campaigns, and institutions.</p>
@@ -256,7 +256,7 @@
           <input type="text" name="promo_code" autocomplete="off">
         </label>
 
-        <div class="hp" aria-hidden="true">
+        <div class="hp">
           <label>
             Leave this field empty
             <input type="text" name="_gotcha" tabindex="-1" autocomplete="off">
@@ -271,6 +271,12 @@
 
     <section class="panel">
       <h2 class="h2">Political Consulting (Strategy Session)</h2>
+
+      <div class="openRow">
+        <span class="openDot"></span>
+        <span>Open to work</span>
+      </div>
+
       <p>
         This session is for candidates, campaign managers, and organizations seeking practical political strategy and field support.
       </p>
@@ -283,7 +289,7 @@
         <li>Messaging and social media strategy (strategic guidance, not content production)</li>
       </ul>
       <p>
-        This is a working strategy session focused on clarity, decision-making, and execution.
+        This is a working strategy session focused on clarity, decision-making, and execution. Please come prepared with relevant background (office sought, district, timeline, and goals) so we can use the hour effectively.
       </p>
     </section>
 
