--- a/more.html
+++ b/more.html
@@ -245,7 +245,7 @@
             <h3 class="fantasyH3">Money</h3>
 
             <p class="kv"><b>Entry Fee:</b> $25 + processing</p>
-            <p class="kv"><b>Payouts:</b> 1st 60% • 2nd 25% • 3rd 15%</p>
+            <p class="kv"><b>Payouts:</b> 🥇 60% • 🥈 25% • 🥉 15%</p>
 
             <p>
               League funds are collected and paid out through LeagueSafe. Please pay before the draft. Once the season ends,
