--- a/services.html
+++ b/services.html
@@ -46,6 +46,29 @@
       100%{box-shadow:0 0 0 0 rgba(46,204,113,0);}
     }
 
+    .pricingWrap h3{
+      margin:22px 0 8px;
+      font-size:15px;
+      letter-spacing:.3px;
+    }
+    .pricingItem{
+      margin-bottom:18px;
+    }
+    .pricingItem h4{
+      margin:0 0 6px;
+      font-size:13px;
+      font-weight:700;
+    }
+    .pricingItem ul{
+      margin:0 0 6px 16px;
+      font-size:12px;
+      line-height:1.5;
+    }
+    .pricingItem p{
+      font-size:12px;
+      margin:0 0 6px;
+    }
+
     .videoWrap{
       position:relative;
       width:100%;
@@ -161,6 +184,91 @@
       </ul>
     </section>
 
+    <section class="panel pricingWrap" aria-label="Price sheet">
+      <h2 class="h2">Price Sheet</h2>
+
+      <h3>Wedding Films</h3>
+
+      <div class="pricingItem">
+        <h4>Bronze — $2,400</h4>
+        <ul>
+          <li>Up to 6 hours</li>
+          <li>5–7 min highlight film</li>
+          <li>14-day turnaround</li>
+        </ul>
+      </div>
+
+      <div class="pricingItem">
+        <h4>Silver — $3,200</h4>
+        <ul>
+          <li>Up to 8 hours</li>
+          <li>Full speeches edit</li>
+          <li>6–8 min cinematic film</li>
+        </ul>
+      </div>
+
+      <div class="pricingItem">
+        <h4>Gold — $4,200</h4>
+        <ul>
+          <li>Up to 10 hours</li>
+          <li>Multi-cam ceremony</li>
+          <li>Drone + social teaser</li>
+        </ul>
+      </div>
+
+      <div class="pricingItem">
+        <h4>Platinum — $5,200</h4>
+        <ul>
+          <li>Up to 12 hours</li>
+          <li>Immersive specialty cameras</li>
+          <li>Full ceremony + speeches</li>
+          <li>48-hr teaser • 7-day delivery</li>
+        </ul>
+      </div>
+
+      <h3>Event & Promotional</h3>
+
+      <div class="pricingItem">
+        <h4>Half Day — $600</h4>
+        <p>Up to 4 hrs • 60–90 sec highlight</p>
+      </div>
+
+      <div class="pricingItem">
+        <h4>Full Day — $1,000</h4>
+        <p>Up to 8 hrs • 2–3 min highlight</p>
+      </div>
+
+      <p style="font-size:12px;">Additional Hour — $125</p>
+
+      <h3>Corporate & Small Business</h3>
+
+      <div class="pricingItem">
+        <h4>Brand Promo — $1,200</h4>
+        <p>Interview + b-roll • 2–3 min film • Social cut</p>
+      </div>
+
+      <div class="pricingItem">
+        <h4>Executive Interview — $850</h4>
+        <p>Up to 2 hrs • 1–2 min polished edit</p>
+      </div>
+
+      <div class="pricingItem">
+        <h4>Monthly Content — From $2,500</h4>
+        <p>1 filming day • 3–5 edited videos</p>
+      </div>
+
+      <h3>Documentary & Editing</h3>
+      <p style="font-size:12px;">Editing — $85/hr (5-hr minimum)</p>
+      <p style="font-size:12px;">Full Documentary Support — Custom Quote</p>
+
+      <h3>Political Consulting</h3>
+      <p style="font-size:12px;">Strategy Intensive (1 Hour) — $250</p>
+      <p style="font-size:12px;">Municipal Campaign Retainer — $3,000–6,000 / month</p>
+      <p style="font-size:12px;">State Legislative Retainer — $5,000–10,000 / month</p>
+      <p style="font-size:12px;">Congressional Retainer — $10,000–20,000+ / month</p>
+
+    </section>
+
     <section class="panel" aria-label="Media Production Services">
       <h2 class="h2">Media Production Services</h2>
 
@@ -191,11 +299,6 @@
           allowfullscreen
         ></iframe>
       </div>
-    </section>
-
-    <section class="panel" aria-label="Price sheet">
-      <h2 class="h2">Price Sheet</h2>
-      <p><em>Placeholder — coming soon.</em></p>
     </section>
 
     <section class="panel" aria-label="Inquiry form">
@@ -274,30 +377,6 @@
 
         <p id="formStatus" class="formStatus" role="status" aria-live="polite"></p>
       </form>
-    </section>
-
-    <section class="panel" aria-label="Political consulting">
-      <h2 class="h2">Political Consulting (Strategy Session)</h2>
-
-      <div class="openRow" aria-label="Availability">
-        <span class="openDot" aria-hidden="true"></span>
-        <span>Open to work</span>
-      </div>
-
-      <p>
-        This session is for candidates, campaign managers, and organizations seeking practical political strategy and field support.
-      </p>
-      <p><strong>Topics may include:</strong></p>
-      <ul class="links">
-        <li>Win number creation and path-to-victory strategy</li>
-        <li>Field program design (persuasion, GOTV, volunteer structure)</li>
-        <li>Turf cutting, targeting, and resource allocation</li>
-        <li>Volunteer training and campaign operations guidance</li>
-        <li>Messaging and social media strategy (strategic guidance, not content production)</li>
-      </ul>
-      <p>
-        This is a working strategy session focused on clarity, decision-making, and execution. Please come prepared with relevant background (office sought, district, timeline, and goals) so we can use the hour effectively.
-      </p>
     </section>
 
     <section class="panel panelHasCornerLogo" aria-label="Schedule">
