--- a/services.html
+++ b/services.html
@@ -246,8 +246,8 @@
       </div>
     </section>
 
-    <section class="panel" aria-label="Inquiry form">
-      <h2 class="h2">Inquiry Form</h2>
+    <section class="panel" aria-label="Media Production Intake form">
+      <h2 class="h2">Media Production Intake Form</h2>
 
       <form
         id="contactForm"
