--- a/services.html
+++ b/services.html
@@ -70,7 +70,7 @@
       border:1px solid rgba(0,0,0,.10);
       border-radius:10px;
       padding:12px 12px 10px;
-      background:rgba(255,255,255,.55);
+      background:rgba(248,248,250,0.90);
     }
     .pricingCard h4{
       margin:0 0 6px;
@@ -348,6 +348,8 @@
         <li>Office systems (weekly goals, pipeline, reporting, and accountability)</li>
       </ul>
     </section>
+
+    <hr class="sectionRule" aria-hidden="true">
 
     <section class="panel pricingWrap" aria-label="Pricing">
       <h2 class="h2">Pricing</h2>
