--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
       <h2 class="h2">About</h2>
       <p>
         I’m Darren Steptoe! Welcome to the site. This space is intended for curious newcomers and those already
-        acquainted with me and my work, providing effortless access to my creations including short films,
-        livestreams, research, and more. Check in periodically for updates.
+        acquainted with me and my work, providing effortless access to my creations including documentaries,
+        books, research, and more. If you're here to hire me, visit the 'Services' page and book a meeting using the scheduler. Check in periodically for updates to the site!
       </p>
     </section>
 
