--- a/index.html
+++ b/index.html
@@ -8,87 +8,20 @@
   <link rel="stylesheet" href="./styles.css" />
 
   <style>
-    /* Page-specific spacing refinement (no content changes) */
+    /* Match Services-3: basic panel rhythm only (no layout overrides) */
+    .panel{ overflow:hidden; }
 
-    .wrap{
-      max-width: 920px;
-      margin: 0 auto;
-      padding: 80px 24px 96px;
-      display: grid;
-      gap: 48px;
+    .panel p{
+      margin:0 0 14px;
+      line-height:1.55;
     }
+    .panel p:last-child{ margin-bottom:0; }
 
-    .header{
-      display: grid;
-      gap: 12px;
+    .panel ul{
+      margin:0;
+      padding-left:18px;
     }
-
-    .title{
-      margin: 0;
-    }
-
-    .sub{
-      margin: 0;
-      opacity: .7;
-    }
-
-    .panel{
-      padding: 32px;
-      border-radius: 20px;
-      display: grid;
-      gap: 20px;
-    }
-
-    .h2{
-      margin: 0;
-    }
-
-    .links{
-      margin: 0;
-      padding-left: 18px;
-      display: grid;
-      gap: 10px;
-    }
-
-    .searchRow{
-      display: flex;
-      gap: 12px;
-      align-items: center;
-      flex-wrap: wrap;
-    }
-
-    .searchRow input{
-      flex: 1;
-      min-width: 200px;
-    }
-
-    .resultsMeta{
-      margin-top: 4px;
-      opacity: .7;
-    }
-
-    .results{
-      margin: 0;
-      padding-left: 18px;
-      display: grid;
-      gap: 8px;
-    }
-
-    .footer{
-      margin-top: 24px;
-    }
-
-    @media (max-width: 640px){
-      .wrap{
-        padding: 64px 20px 80px;
-        gap: 40px;
-      }
-
-      .panel{
-        padding: 24px;
-        gap: 18px;
-      }
-    }
+    .panel ul li{ margin:8px 0; }
   </style>
 </head>
 
@@ -138,8 +71,8 @@
       <h2 class="h2">About</h2>
       <p>
         I’m Darren Steptoe! Welcome to the site. This space is intended for curious newcomers and those already
-        acquainted with me and my work, providing effortless access to my creations including documentaries,
-        books, research, and more. If you're here to hire me, visit the 'Services' page and book a meeting using the scheduler. Check in periodically for updates to the site!
+        acquainted with me and my work, providing effortless access to my creations including short films,
+        livestreams, research, and more. Check in periodically for updates.
       </p>
     </section>
 
