--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       <h2 class="h2">About</h2>
       <p>
         I’m Darren Steptoe! Welcome to the site. This space is intended for curious newcomers and those already
-        acquainted with me and my work, providing effortless access to my creations including short films,
-        livestreams, research, and more. Check in periodically for updates.
+        acquainted with me and my work, providing effortless access to my creations including documentaries,
+        books, research, and more. If you're here for the services I provide, visit the 'Services' page from the menu above.<br /><br /> Check in periodically for updates. Thanks for stopping by!
       </p>
     </section>
 
