--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <p>
         I’m Darren Steptoe! Welcome to the site. This space is intended for curious newcomers and those already
         acquainted with me and my work, providing effortless access to my creations including documentaries,
-        books, research, and more. If you're here for the services I provide, visit the 'Services' page from the menu above.<br /><br /> Check in periodically for updates. Thanks for stopping by!
+        books, research, and more. If you're here for the services I provide, please visit the 'Services' page using the menu above.
       </p>
     </section>
 
