--- a/services.html
+++ b/services.html
@@ -251,7 +251,7 @@
     <section class="panel" aria-label="YouTube video">
       <div class="videoWrap">
         <iframe
-          src="https://www.youtube.com/embed/ycHys4e6s3Q"
+          src="https://youtu.be/ORU7eBrlBw8?si=Pw-Q-u25ld7FbaRN"
           title="YouTube video"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
